maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:25: error: not found: value coord
  setIndication(coord(0), coord(1), 0)
                ^JediEscaper:25: error: not found: value coord
  setIndication(coord(0), coord(1), 0)
                          ^